--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
             <div id="deviceready">
                 <p class="status pending blink">Connecting to Device</p>
                 <p class="status complete blink hide">Device is Ready</p>
-                <p id="geolocation"></p>
+                <img id="map">
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
