--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
             <div id="deviceready">
                 <p class="status pending blink">Connecting to Device</p>
                 <p class="status complete blink hide">Device is Ready</p>
+                <p id="geolocation">Your coordinates here</p>
                 <img id="map">
             </div>
         </div>
